refactor: добавить setup-метод и вынести туда инициализацию тестовых данных